# python-project-template

./: .gitignore  README.md  README.mkdocs.md  README.release-workflow.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/project/: __init__.py  __main__.py
tests/: test_smoke.py
